# poker-solver

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  poker.rs  solver.rs
src/interfaces/: game.rs
src/poker/: game.rs  mod.rs  tree.rs
tests/: hand.rs  kuhn-tree.json  kuhn.rs  limit.rs  poker.rs  pre.rs  river.rs  simple.rs
tools/: main.py
