[package]
name = "poker-solver"
version = "0.1.0"
edition = "2021"

[lib]
name = "poker_solver"
path = "src/lib.rs"

[dependencies]
poker_abstraction = { git = "https://github.com/yugurt2005/poker-abstraction", branch = "master" }
poker_evaluator = { git = "https://github.com/yugurt2005/poker-evaluator", branch = "master" }
poker_indexer = { git = "https://github.com/yugurt2005/poker-indexer", branch = "master" }

bincode = "1.3.3"
smallvec = "1.13.2"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
rayon = "1.10.0"
